# string-interner

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES.md  TODO.md  aliases.js  index.html  search-index.js  source-files.js
.cargo/: audit.toml  config.toml
.github/workflows/: release.yml  rust.yml  test.yml
bench/: input.txt
benches/: bench.rs  setup.rs
implementors/alloc/allocator/: trait.Alloc.js
implementors/alloc/borrow/: trait.ToOwned.js
implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Pointer.js  trait.Write.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/iter/traits/: trait.DoubleEndedIterator.js  trait.ExactSizeIterator.js  trait.Extend.js  trait.FromIterator.js  (+3 more)
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/str/: trait.FromStr.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/string_interner/: trait.Symbol.js
serde/: index.html  trait.Deserialize.html  trait.Deserializer.html  trait.Serialize.html  trait.Serializer.html
serde/de/: index.html  struct.IgnoredAny.html  trait.Deserialize.html  trait.DeserializeSeed.html  trait.Deserializer.html  trait.EnumAccess.html  trait.IntoDeserializer.html  trait.MapAccess.html  trait.SeqAccess.html  trait.VariantAccess.html  trait.Visitor.html
serde/de/value/: struct.BoolDeserializer.html  struct.BorrowedBytesDeserializer.html  struct.BorrowedStrDeserializer.html  struct.CharDeserializer.html  struct.CowStrDeserializer.html  struct.F32Deserializer.html  struct.F64Deserializer.html  struct.I128Deserializer.html  struct.I16Deserializer.html  struct.I32Deserializer.html  struct.I64Deserializer.html  struct.I8Deserializer.html  struct.IsizeDeserializer.html  struct.MapAccessDeserializer.html  struct.MapDeserializer.html  struct.SeqAccessDeserializer.html  struct.SeqDeserializer.html  struct.StrDeserializer.html  struct.StringDeserializer.html  struct.U128Deserializer.html  struct.U16Deserializer.html  struct.U32Deserializer.html  struct.U64Deserializer.html  struct.U8Deserializer.html  struct.UnitDeserializer.html  struct.UsizeDeserializer.html
serde/ser/: index.html  struct.Impossible.html  trait.Serialize.html  trait.SerializeMap.html  trait.SerializeSeq.html  trait.SerializeStruct.html  trait.SerializeStructVariant.html  trait.SerializeTuple.html  trait.SerializeTupleStruct.html  trait.SerializeTupleVariant.html  trait.Serializer.html
src/: benches.rs  compat.rs  docs.rs  error.rs  internal_str.rs  interner.rs  interner2.rs  iter.rs  lib.rs  pinned_str.rs  serde_impl.rs  string_interner.rs  symbol.rs  tests.rs  tests2.rs  wrapped.rs
src/backend/: bucket.rs  bucket2.rs  buffer.rs  interned_str.rs  mod.rs  simple.rs  string.rs
src/backend/bucket/: fixed.rs  fixed_str.rs  interned_str.rs  mod.rs
src/serde/: export.rs.html  integer128.rs.html  lib.rs.html  macros.rs.html
src/serde/de/: from_primitive.rs.html  ignored_any.rs.html  impls.rs.html  mod.rs.html  utf8.rs.html  value.rs.html
src/serde/private/: de.rs.html  macros.rs.html  mod.rs.html  ser.rs.html
src/serde/ser/: impls.rs.html  impossible.rs.html  mod.rs.html
src/string_interner/: lib.rs.html  serde_impl.rs.html
string_interner/: DefaultStringInterner.t.html  StringInterner.t.html  Sym.t.html  all.html  index.html  sidebar-items.js  struct.IntoIter.html  struct.Iter.html  struct.StringInterner.html  struct.Sym.html  struct.Values.html  trait.Symbol.html  type.DefaultStringInterner.html
tests/: allocator.rs  compiletests.rs  tests.rs
tests/allocator/: mod.rs
tests/compile-fail/: pooled_str_outlives.rs
(+24 files in other folders)
