[package]
name = "string-interner"
version = "0.11.2"
authors = ["Robbepop"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/robbepop/string-interner"
documentation = "https://docs.rs/string-interner"
keywords = ["interner", "intern", "string", "str", "symbol"]
description = """Efficient string interner with minimal memory footprint
and fast access to the underlying strings.
"""
categories = ["data-structures"]
edition = "2018"

[dependencies]
cfg-if = "0.1"
hashbrown = { version = "0.8", default-features = false, features = ["ahash"] }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.3"
fxhash = "0.2"
jemallocator = "0.3"
jemalloc-ctl = "0.3"

[[bench]]
name = "bench"
harness = false

[features]
default = ["std", "serde-1", "inline-more"]
std = []
serde-1 = ["serde"]
inline-more = ["hashbrown/inline-more"]

[badges]
travis-ci = { repository = "Robbepop/string-interner" }
appveyor = { repository = "Robbepop/string-interner", branch = "master", service = "github" }
